Enkel velkomstside med oppgave A-info

--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="no">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velkommen</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #003366; /* Skolens mørkeblå farge */
+        }
+
+        .info-box {
+            background-color: #e0e0e0;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Velkommen til min webserver</h1>
-    <p><strong>Navn:</strong> DITT NAVN</p>
-    <p><strong>IP-adresse:</strong> VM-IP-ADRESSE</p>
+    <h1>Velkommen til min webserver!</h1>
+
+    <div class="info-box">
+        <p><strong>Navn:</strong> Sofie</p>
+        <p><strong>IP-adresse:</strong> 172.24.64.241</p>
+        <p><strong>Valgt oppgave:</strong> Oppgave A – IT-Utvikling: Oppdatert skolehelsetjeneste-side</p>
+        <p><strong>Planlagt teknologi:</strong> React for frontend-prototypen</p>
+    </div>
+
+    <h2>Om prosjektet</h2>
     <p>
-        Denne serveren skal brukes til å utvikle/drifte
-        en enkel webapplikasjon i senere del av oppgaven.
+        Jeg lager en prototype for en oppdatert skolehelsetjeneste-side. 
+        Målet er å gjøre informasjonen enklere å finne for elever, med tydelig budskap, kontaktinfo og åpningstider.
     </p>
+
+    <h2>Planlagte funksjoner</h2>
+    <ul>
+        <li>Forside med info om skolehelsetjenesten</li>
+        <li>Ofte stilte spørsmål og nyttige ressurser</li>
+        <li>Funksjon for å bestille time hos helsesykepleier (frontend)</li>
+    </ul>
+
+    <p>Nettsiden vil bli videreutviklet i React og hostes på denne Ubuntu-serveren.</p>
 </body>
 </html>
-
 
